General project code cleanup